project-parser/antlr4/quirk24Parser.py
# Generated from quirk24.g4 by ANTLR 4.6
# encoding: utf-8
from antlr4 import *
from io import StringIO



class quirk24Parser ( Parser ):

    grammarFileName = "quirk24.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'protocol'", "'{'", "'}'", "'<'", "'>'", 
                     "'extends'", "'fun'", "'('", "')'", "';'", "':'", "'class'", 
                     "'implements'", "'constant'", "'static'", "'['", "']'", 
                     "'function'", "'->'", "'bool'", "'char'", "'string'", 
                     "'int'", "'float'", "'void'", "'if'", "'else'", "'while'", 
                     "'for'", "'return'", "'halt'", "'+'", "'-'", "'!'", 
                     "'new'", "'lambda'", "'.'", "'null'", "'true'", "'false'", 
                     "','", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'='", "'||'", "'&&'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "TID", "TVAR", "NUM", "EXPONENT", 
                      "FLOAT", "ASSIGNOP", "OROP", "ANDOP", "RELOP", "MULOP", 
                      "DIGIT", "LCLTR", "UCLTR", "IDCHAR", "PRINTABLE", 
                      "CHAR", "STRING", "COMMENT", "WHITE" ]

    RULE_tid = 0
    RULE_typeid = 1
    RULE_tvar = 2
    RULE_program = 3
    RULE_protodec = 4
    RULE_typevars = 5
    RULE_extends = 6
    RULE_typeapp = 7
    RULE_funproto = 8
    RULE_classdec = 9
    RULE_classbody = 10
    RULE_init = 11
    RULE_bodydec = 12
    RULE_constdec = 13
    RULE_globaldec = 14
    RULE_fielddec = 15
    RULE_formal = 16
    RULE_fundec = 17
    RULE_block = 18
    RULE_localdec = 19
    RULE_vardec = 20
    RULE_ttype = 21
    RULE_primtype = 22
    RULE_rtype = 23
    RULE_stm = 24
    RULE_exp = 25
    RULE_lhs = 26
    RULE_disjunct = 27
    RULE_conjunct = 28
    RULE_simple = 29
    RULE_term = 30
    RULE_factor = 31
    RULE_factor_rest = 32
    RULE_literal = 33
    RULE_charliteral = 34
    RULE_stringliteral = 35
    RULE_intliteral = 36
    RULE_floatliteral = 37
    RULE_tvars = 38
    RULE_protodecs = 39
    RULE_typeapps = 40
    RULE_funprotos = 41
    RULE_classdecs = 42
    RULE_types = 43
    RULE_bodydecs = 44
    RULE_localdecs = 45
    RULE_stms = 46
    RULE_formals = 47
    RULE_actuals = 48

    ruleNames =  [ "tid", "typeid", "tvar", "program", "protodec", "typevars", 
                   "extends", "typeapp", "funproto", "classdec", "classbody", 
                   "init", "bodydec", "constdec", "globaldec", "fielddec", 
                   "formal", "fundec", "block", "localdec", "vardec", "ttype", 
                   "primtype", "rtype", "stm", "exp", "lhs", "disjunct", 
                   "conjunct", "simple", "term", "factor", "factor_rest", 
                   "literal", "charliteral", "stringliteral", "intliteral", 
                   "floatliteral", "tvars", "protodecs", "typeapps", "funprotos", 
                   "classdecs", "types", "bodydecs", "localdecs", "stms", 
                   "formals", "actuals" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    TID=42
    TVAR=43
    NUM=44
    EXPONENT=45
    FLOAT=46
    ASSIGNOP=47
    OROP=48
    ANDOP=49
    RELOP=50
    MULOP=51
    DIGIT=52
    LCLTR=53
    UCLTR=54
    IDCHAR=55
    PRINTABLE=56
    CHAR=57
    STRING=58
    COMMENT=59
    WHITE=60

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class TidContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TID(self):
            return self.getToken(quirk24Parser.TID, 0)

        def getRuleIndex(self):
            return quirk24Parser.RULE_tid

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTid" ):
                return visitor.visitTid(self)
            else:
                return visitor.visitChildren(self)




    def tid(self):

        localctx = quirk24Parser.TidContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_tid)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(quirk24Parser.TID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeidContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TID(self):
            return self.getToken(quirk24Parser.TID, 0)

        def getRuleIndex(self):
            return quirk24Parser.RULE_typeid

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeid" ):
                return visitor.visitTypeid(self)
            else:
                return visitor.visitChildren(self)




    def typeid(self):

        localctx = quirk24Parser.TypeidContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_typeid)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(quirk24Parser.TID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TvarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TVAR(self):
            return self.getToken(quirk24Parser.TVAR, 0)

        def getRuleIndex(self):
            return quirk24Parser.RULE_tvar

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTvar" ):
                return visitor.visitTvar(self)
            else:
                return visitor.visitChildren(self)




    def tvar(self):

        localctx = quirk24Parser.TvarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tvar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(quirk24Parser.TVAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def protodecs(self):
            return self.getTypedRuleContext(quirk24Parser.ProtodecsContext,0)


        def classdecs(self):
            return self.getTypedRuleContext(quirk24Parser.ClassdecsContext,0)


        def stm(self):
            return self.getTypedRuleContext(quirk24Parser.StmContext,0)


        def EOF(self):
            return self.getToken(quirk24Parser.EOF, 0)

        def getRuleIndex(self):
            return quirk24Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = quirk24Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.protodecs()
            self.state = 105
            self.classdecs()
            self.state = 106
            self.stm()
            self.state = 107
            self.match(quirk24Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProtodecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeid(self):
            return self.getTypedRuleContext(quirk24Parser.TypeidContext,0)


        def typevars(self):
            return self.getTypedRuleContext(quirk24Parser.TypevarsContext,0)


        def extends(self):
            return self.getTypedRuleContext(quirk24Parser.ExtendsContext,0)


        def funprotos(self):
            return self.getTypedRuleContext(quirk24Parser.FunprotosContext,0)


        def getRuleIndex(self):
            return quirk24Parser.RULE_protodec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProtodec" ):
                return visitor.visitProtodec(self)
            else:
                return visitor.visitChildren(self)




    def protodec(self):

        localctx = quirk24Parser.ProtodecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_protodec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(quirk24Parser.T__0)
            self.state = 110
            self.typeid()
            self.state = 111
            self.typevars()
            self.state = 112
            self.extends()
            self.state = 113
            self.match(quirk24Parser.T__1)
            self.state = 114
            self.funprotos()
            self.state = 115
            self.match(quirk24Parser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypevarsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tvars(self):
            return self.getTypedRuleContext(quirk24Parser.TvarsContext,0)


        def getRuleIndex(self):
            return quirk24Parser.RULE_typevars

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypevars" ):
                return visitor.visitTypevars(self)
            else:
                return visitor.visitChildren(self)




    def typevars(self):

        localctx = quirk24Parser.TypevarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_typevars)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==quirk24Parser.T__3:
                self.state = 117
                self.match(quirk24Parser.T__3)
                self.state = 118
                self.tvars()
                self.state = 119
                self.match(quirk24Parser.T__4)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExtendsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeapps(self):
            return self.getTypedRuleContext(quirk24Parser.TypeappsContext,0)


        def getRuleIndex(self):
            return quirk24Parser.RULE_extends

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExtends" ):
                return visitor.visitExtends(self)
            else:
                return visitor.visitChildren(self)




    def extends(self):

        localctx = quirk24Parser.ExtendsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_extends)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==quirk24Parser.T__5:
                self.state = 123
                self.match(quirk24Parser.T__5)
                self.state = 124
                self.typeapps()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeappContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeid(self):
            return self.getTypedRuleContext(quirk24Parser.TypeidContext,0)


        def types(self):
            return self.getTypedRuleContext(quirk24Parser.TypesContext,0)


        def tvar(self):
            return self.getTypedRuleContext(quirk24Parser.TvarContext,0)


        def getRuleIndex(self):
            return quirk24Parser.RULE_typeapp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeapp" ):
                return visitor.visitTypeapp(self)
            else:
                return visitor.visitChildren(self)




    def typeapp(self):

        localctx = quirk24Parser.TypeappContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_typeapp)
        try:
            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.typeid()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.typeid()
                self.state = 129
                self.match(quirk24Parser.T__3)
                self.state = 130
                self.types()
                self.state = 131
                self.match(quirk24Parser.T__4)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 133
                self.tvar()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunprotoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tid(self):
            return self.getTypedRuleContext(quirk24Parser.TidContext,0)


        def typevars(self):
            return self.getTypedRuleContext(quirk24Parser.TypevarsContext,0)


        def formals(self):
            return self.getTypedRuleContext(quirk24Parser.FormalsContext,0)


        def rtype(self):
            return self.getTypedRuleContext(quirk24Parser.RtypeContext,0)


        def getRuleIndex(self):
            return quirk24Parser.RULE_funproto

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunproto" ):
                return visitor.visitFunproto(self)
            else:
                return visitor.visitChildren(self)




    def funproto(self):

        localctx = quirk24Parser.FunprotoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funproto)
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.match(quirk24Parser.T__6)
                self.state = 137
                self.tid()
                self.state = 138
                self.typevars()
                self.state = 139
                self.match(quirk24Parser.T__7)
                self.state = 140
                self.formals()
                self.state = 141
                self.match(quirk24Parser.T__8)
                self.state = 142
                self.match(quirk24Parser.T__9)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.match(quirk24Parser.T__6)
                self.state = 145
                self.tid()
                self.state = 146
                self.typevars()
                self.state = 147
                self.match(quirk24Parser.T__7)
                self.state = 148
                self.formals()
                self.state = 149
                self.match(quirk24Parser.T__8)
                self.state = 150
                self.match(quirk24Parser.T__10)
                self.state = 151
                self.rtype()
                self.state = 152
                self.match(quirk24Parser.T__9)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClassdecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tid(self):
            return self.getTypedRuleContext(quirk24Parser.TidContext,0)


        def typevars(self):
            return self.getTypedRuleContext(quirk24Parser.TypevarsContext,0)


        def typeapps(self):
            return self.getTypedRuleContext(quirk24Parser.TypeappsContext,0)


        def classbody(self):
            return self.getTypedRuleContext(quirk24Parser.ClassbodyContext,0)


        def getRuleIndex(self):
            return quirk24Parser.RULE_classdec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassdec" ):
                return visitor.visitClassdec(self)
            else:
                return visitor.visitChildren(self)




    def classdec(self):

        localctx = quirk24Parser.ClassdecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_classdec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(quirk24Parser.T__11)
            self.state = 157
            self.tid()
            self.state = 158
            self.typevars()
            self.state = 159
            self.match(quirk24Parser.T__12)
            self.state = 160
            self.typeapps()
            self.state = 161
            self.classbody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClassbodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def init(self):
            return self.getTypedRuleContext(quirk24Parser.InitContext,0)


        def bodydecs(self):
            return self.getTypedRuleContext(quirk24Parser.BodydecsContext,0)


        def getRuleIndex(self):
            return quirk24Parser.RULE_classbody

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassbody" ):
                return visitor.visitClassbody(self)
            else:
                return visitor.visitChildren(self)




    def classbody(self):

        localctx = quirk24Parser.ClassbodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_classbody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(quirk24Parser.T__1)
            self.state = 164
            self.init()
            self.state = 165
            self.bodydecs()
            self.state = 166
            self.match(quirk24Parser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class InitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def formals(self):
            return self.getTypedRuleContext(quirk24Parser.FormalsContext,0)


        def block(self):
            return self.getTypedRuleContext(quirk24Parser.BlockContext,0)


        def getRuleIndex(self):
            return quirk24Parser.RULE_init

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInit" ):
                return visitor.visitInit(self)
            else:
                return visitor.visitChildren(self)




    def init(self):

        localctx = quirk24Parser.InitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_init)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(quirk24Parser.T__7)
            self.state = 169
            self.formals()
            self.state = 170
            self.match(quirk24Parser.T__8)
            self.state = 171
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodydecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constdec(self):
            return self.getTypedRuleContext(quirk24Parser.ConstdecContext,0)


        def globaldec(self):
            return self.getTypedRuleContext(quirk24Parser.GlobaldecContext,0)


        def fielddec(self):
            return self.getTypedRuleContext(quirk24Parser.FielddecContext,0)


        def fundec(self):
            return self.getTypedRuleContext(quirk24Parser.FundecContext,0)


        def getRuleIndex(self):
            return quirk24Parser.RULE_bodydec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBodydec" ):
                return visitor.visitBodydec(self)
            else:
                return visitor.visitChildren(self)




    def bodydec(self):

        localctx = quirk24Parser.BodydecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_bodydec)
        try:
            self.state = 177
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [quirk24Parser.T__13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.constdec()
                pass
            elif token in [quirk24Parser.T__14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.globaldec()
                pass
            elif token in [quirk24Parser.T__17, quirk24Parser.T__19, quirk24Parser.T__20, quirk24Parser.T__21, quirk24Parser.T__22, quirk24Parser.T__23, quirk24Parser.TID, quirk24Parser.TVAR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 175
                self.fielddec()
                pass
            elif token in [quirk24Parser.T__6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 176
                self.fundec()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConstdecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primtype(self):
            return self.getTypedRuleContext(quirk24Parser.PrimtypeContext,0)


        def tid(self):
            return self.getTypedRuleContext(quirk24Parser.TidContext,0)


        def literal(self):
            return self.getTypedRuleContext(quirk24Parser.LiteralContext,0)


        def getRuleIndex(self):
            return quirk24Parser.RULE_constdec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstdec" ):
                return visitor.visitConstdec(self)
            else:
                return visitor.visitChildren(self)




    def constdec(self):

        localctx = quirk24Parser.ConstdecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_constdec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(quirk24Parser.T__13)
            self.state = 180
            self.primtype()
            self.state = 181
            self.tid()
            self.state = 182
            self.match(quirk24Parser.ASSIGNOP)
            self.state = 183
            self.literal()
            self.state = 184
            self.match(quirk24Parser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GlobaldecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primtype(self):
            return self.getTypedRuleContext(quirk24Parser.PrimtypeContext,0)


        def tid(self):
            return self.getTypedRuleContext(quirk24Parser.TidContext,0)


        def literal(self):
            return self.getTypedRuleContext(quirk24Parser.LiteralContext,0)


        def getRuleIndex(self):
            return quirk24Parser.RULE_globaldec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobaldec" ):
                return visitor.visitGlobaldec(self)
            else:
                return visitor.visitChildren(self)




    def globaldec(self):

        localctx = quirk24Parser.GlobaldecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_globaldec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self.match(quirk24Parser.T__14)
            self.state = 187
            self.primtype()
            self.state = 188
            self.tid()
            self.state = 189
            self.match(quirk24Parser.ASSIGNOP)
            self.state = 190
            self.literal()
            self.state = 191
            self.match(quirk24Parser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FielddecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def formal(self):
            return self.getTypedRuleContext(quirk24Parser.FormalContext,0)


        def getRuleIndex(self):
            return quirk24Parser.RULE_fielddec

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFielddec" ):
                return visitor.visitFielddec(self)
            else:
                return visitor.visitChildren(self)




    def fielddec(self):

        localctx = quirk24Parser.FielddecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_fielddec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self.formal()
            self.state = 194
            self.match(quirk24Parser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FormalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ttype(self):
            return self.getTypedRuleContext(quirk24Parser.TtypeContext,0)


        def tid(self):
            return self.getTypedRuleContext(quirk24Parser.TidContext,0)


        def getRuleIndex(self):
            return quirk24Parser.RULE_formal

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormal" ):
                return visitor.visitFormal(self)
            else:
                return visitor.visitChildren(self)




    def formal(self):

        localctx = quirk24Parser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.ttype(0)
            self.state = 197
            self.tid()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FundecContext(ParserRuleContext):
